--- a/FitNesseRoot/FrontPage/TVVS.wiki
+++ b/FitNesseRoot/FrontPage/TVVS.wiki
@@ -11,7 +11,7 @@ Test
 
 First Table
 
-|Calculator                        |
+!|Calculator                        |
 |number1|number2|operation|operate?|
 |10     |2      |:        |5       |
 |12.6   |3      |+        |15.6    |
@@ -26,12 +26,9 @@ First Table
 
 Second Table
 
-|Calculator                              |
+!|Calculator                              |
 |number1|number2|operation|operate?      |
 |10     |2      |^        |100.0         |
 |3      |2      |^        |9.0           |
 |100    |4      |^        |100000000.0   |
 |2      |3      |^        |8.0           |
-
-
-Third Table
